--- a/HTML/codehelp.html
+++ b/HTML/codehelp.html
@@ -5,22 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codehelp</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-       
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div id="navbar">
         <nav>
-           <ul>
-                <li class="navigation">About Us</li>
-                <li class="navigation">Courses</li>
-                <li class="navigation">Labs</li>
-                <li class="navigation">Contacts</li>
-           </ul>
-        </div>
+          <ul>
+            <li class="navigation">About Us</li>
+            <li class="navigation">Courses</li>
+            <li class="navigation">Labs</li>
+            <li class="navigation">Contacts</li>
+          </ul>
+          <button class="btn">DASH BOARD</button>
+          <button class="btn">LOGIN</button>
         </nav>
       </div>
     </header>
