project code heplp

--- a/HTML/codehelp.html
+++ b/HTML/codehelp.html
@@ -4,23 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codehelp</title>
+    <title>codre help</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <header>
-      <div id="navbar">
+    
+      <div class="navbar">
         <nav>
-          <ul>
-            <li class="navigation">About Us</li>
-            <li class="navigation">Courses</li>
-            <li class="navigation">Labs</li>
-            <li class="navigation">Contacts</li>
+          <img src="https://cdn.thecodehelp.in/qdo970k2vrxj8kefd1zt_9520ff468a.svg" alt="">
+          <ul class="navigation">
+            <li class="list">About Us</li>
+            <li class="list">Courses</li>
+            <li class="list">Labs</li>
+            <li class="list">Contacts</li>
           </ul>
-          <button class="btn">DASH BOARD</button>
-          <button class="btn">LOGIN</button>
+          <div class="btn">
+            <button>Dashboard</button>
+            <button>Login<i id="icon" class="fa-solid fa-arrow-right-to-bracket"></i></button>
+          </div>
         </nav>
       </div>
-    </header>
+   
+    
   </body>
 </html>
