modified offer menu and about work shop

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -6,58 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cafe daze</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="navbar">
-        <nav>
-         <img src="./images/logo.jpg" alt="" />
+      <nav>
+        <img src="./images/logo.jpg" alt="" />
         <ul class="navlist">
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>COFFEES</li>
-            <li>SHOP</li>
-            <li>BLOG</li>
-            <li>CONTACTS</li>
+          <li>HOME</li>
+          <li>ABOUT</li>
+          <li>COFFEES</li>
+          <li>SHOP</li>
+          <li>BLOG</li>
+          <li>CONTACTS</li>
         </ul>
-            
-        <a class="symbol" href=""><i class="fa-solid fa-user"></i>LOGIN</a>
-        <a class="symbol"href=""><i class="fa-solid fa-magnifying-glass"></i></a> 
-        </nav>
-     </div>
-     <div>
-        <h1 class="offer">OUR COFFEE OFFERS</h1>
-        
-           <img class="dots" src="./images/dots.jpg" alt="">
-     <div class="divoffermenu">
-        <div class="offermenu">
-            <img src="./images/img-1.png" alt="">
-            <h3>TYPES OF COFFEES</h3>
-            <p>looking at its layout. The point of</p>
-            <button>Read More</button>
-        </div>
-        <div class="offermenu">
-            <img src="./images/img-2.png" alt="">
-            <h3>BEAN VARIETIES</h3>
-            <p>looking at its layout. The point of</p>
-            <button>Read More</button>
-        </div>
-        <div class="offermenu">
-            <img src="./images/img-3.png" alt="">
-            <h3>COFFEE & PASTRY</h3>
-            <p>looking at its layout. The point of</p>
-            <button>Read More</button>
-        </div>
-        <div class="offermenu">
-            <img src="./images/img-4.png" alt="">
-            <h3>COFFEE TO GO</h3>
-            <p>looking at its layout. The point of</p>
-            <button>Read More</button>
-        </div>
-    </div>
-     </div>
 
-   
+        <a class="symbol" href=""><i class="fa-solid fa-user"></i>LOGIN</a>
+        <a class="symbol" href=""
+          ><i class="fa-solid fa-magnifying-glass"></i
+        ></a>
+      </nav>
+    </div>
+    <div class="div2">
+      <h1 class="offer">OUR COFFEE OFFERS</h1>
+
+      <img class="dots" src="./images/dots.jpg" alt="" />
+      <div class="divoffermenu">
+        <div class="offermenu">
+          <img src="./images/img-1.png" alt="" />
+          <h3>TYPES OF COFFEES</h3>
+          <p>looking at its layout. The point of</p>
+          <button>READ MORE</button>
+        </div>
+        <div class="offermenu">
+          <img src="./images/img-2.png" alt="" />
+          <h3>BEAN VARIETIES</h3>
+          <p>looking at its layout. The point of</p>
+          <button>READ MORE</button>
+        </div>
+        <div class="offermenu">
+          <img src="./images/img-3.png" alt="" />
+          <h3>COFFEE & PASTRY</h3>
+          <p>looking at its layout. The point of</p>
+          <button>READ MORE</button>
+        </div>
+        <div class="offermenu">
+          <img src="./images/img-4.png" alt="" />
+          <h3>COFFEE TO GO</h3>
+          <p>looking at its layout. The point of</p>
+          <button>READ MORE</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="div3">
+      <h1 class="aboutshop">ABOUT OUR SHOP</h1>
+      <img class="dots" src="./images/dots.jpg" alt="" />
+      <img class="aboutimg" src="./images/about-img.png" alt="">
+    </div>
   </body>
- 
 </html>
