done with the third div

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -69,6 +69,12 @@
       <h1 class="aboutshop">ABOUT OUR SHOP</h1>
       <img class="dots" src="./images/dots.jpg" alt="" />
       <img class="aboutimg" src="./images/about-img.png" alt="">
+      <div class="div-in-aboutshop">
+        <h1>Coffee Distribution</h1>
+        <p>has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editorhas a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editor</p>
+        <button>READ MORE</button>
+
+      </div>
     </div>
   </body>
 </html>
