started client page

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -73,8 +73,31 @@
         <h1>Coffee Distribution</h1>
         <p>has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editorhas a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editor</p>
         <button>READ MORE</button>
-
       </div>
     </div>
+    <div class="div4">
+      <h1>WHAT SYAS CUSTOMERS</h1>
+      <img class="dots" src="./images/dots.jpg" alt="">
+      <div class="client">
+
+        <div>
+          <img src="./images/client-img1.png" alt="">
+          <h2>DAVID</h2>
+          <p>now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text,</p>
+        </div>
+        <div>
+          <img src="./images/client-img2.png" alt="">
+          <h2>JOS</h2>
+          <p>now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text,</p>
+        </div>
+        <div>
+          <img src="./images/client-img3.png" alt="">
+          <h2>ALLEN</h2>
+          <p>now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text,</p>
+        </div>
+      </div>
+
+    </div>
+    
   </body>
 </html>
