done with the client page and started blogging page

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -96,8 +96,26 @@
           <p>now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancynow use Lorem Ipsum as their default model text,</p>
         </div>
       </div>
+    </div>
+    
+    <div class="div5">
+      <h1 >OUR BLOG</h1>
+      <img class="dots" src="./images/dots.jpg" alt="">
+      <div class="div-ourblog">
+        <div class="blogdiv">
+          <img src="./images/blog-img1.png" alt="">
+          <h2>PREP TECHNIQUES COFFEE</h2>
+          <p>distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+        </div>
+        <div class="blogdiv">
+          <img src="./images/blog-img2.png" alt="">
+          <h2>PREP TECHNIQUES COFFEE</h2>
+          <p>distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+        </div>
+      </div>
 
     </div>
+
     
   </body>
 </html>
