done with the  blogging page

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -106,16 +106,21 @@
           <img src="./images/blog-img1.png" alt="">
           <h2>PREP TECHNIQUES COFFEE</h2>
           <p>distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+          <button>READ MORE</button>
         </div>
         <div class="blogdiv">
           <img src="./images/blog-img2.png" alt="">
           <h2>PREP TECHNIQUES COFFEE</h2>
           <p>distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
+          <button>READ MORE</button> 
         </div>
       </div>
-
     </div>
-
+    <div class="div6">
+      <h1>GET IN TOUCH</h1>
+      <img src="./images/dots.jpg" alt="">
+      
+    </div>
     
   </body>
 </html>
