home page started

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <div class="div1">
     <div class="navbar">
       <nav>
         <img src="./images/logo.jpg" alt="" />
@@ -33,6 +34,20 @@
         ></a>
       </nav>
     </div>
+    <div class="homepage">
+      <img  id="tealogo" src="./images/banner-img.png" alt="">
+      <div class="text">
+      <h1>COFFEE</h1>
+      <h2>Tasty Of DozeCafe</h2>
+      <p>more-or-less normal distribution of letters, as opposed to using</p>
+      <button>ABOUT US</button>
+      <button>CALL NOW</button>
+    </div>
+    </div>
+    </div>
+   
+  </div>
+
     <div class="div2">
       <h1 class="offer">OUR COFFEE OFFERS</h1>
 
