modified in button

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -41,7 +41,7 @@
       <h2>Tasty Of DozeCafe</h2>
       <p>more-or-less normal distribution of letters, as opposed to using</p>
       <button>ABOUT US</button>
-      <button>CALL NOW</button>
+      <button id="callnow">CALL NOW</button>
     </div>
     </div>
     </div>
