modified in home page

--- a/cafedaze/index.html
+++ b/cafedaze/index.html
@@ -40,7 +40,7 @@
       <h1>COFFEE</h1>
       <h2>Tasty Of DozeCafe</h2>
       <p>more-or-less normal distribution of letters, as opposed to using</p>
-      <button>ABOUT US</button>
+      <button id="aboutus">ABOUT US</button>
       <button id="callnow">CALL NOW</button>
     </div>
     </div>
