started new project

--- a/practise/animation.html
+++ b/practise/animation.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>animaton and keyframe</title>
-    <link rel="stylesheet" href="style.css">
-   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Axios with async/await Example</title>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <h1>animation </h1>
+
+<script>
+// Define an asynchronous function to fetch data from the API using Axios
+async function fetchData() {
+  try {
+    // Make a GET request to the API endpoint using Axios
+    const response = await axios.get('https://jsonplaceholder.typicode.com/todos/1');
+
+    // Access the data property of the response to get the JSON data
+    const jsonData = response.data;
+
+    // Log the JSON data to the console
+    console.log(jsonData);
+  } catch (error) {
+    // Log any errors to the console
+    console.error('Error:', error);
+  }
+}
+
+// Call the asynchronous function
+fetchData();
+</script>
+
 </body>
 </html>
